finalize navigation and squash bugs!

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -109,6 +109,7 @@ header {
   top: 0;
   left: 0;
   margin: auto;
+  height: 70px;
 }
 
 nav {
@@ -170,7 +171,7 @@ ul li a {
   top: 67px;
   left: 0;
   transition: max-height 0.6s ease;
-  background-color: #2E333C;
+  background-color: #2e333c;
   display: block;
   width: 100%;
 }
@@ -184,6 +185,14 @@ ul li a {
 .nav-items li a {
   margin: 20px 35px;
   display: block;
+}
+
+.title-link {
+  font-size: 1.3rem;
+  font-weight: 500;
+  max-width: 60px;
+  text-align: center;
+  order: 2;
 }
 
 /* On screens larger than 35em, remove the menu link and display all menu items */
@@ -216,7 +225,8 @@ ul li a {
   }
 
   .nav-items li a {
-    margin: 5px 20px 5px 0;
+    margin: 0 20px 0 0;
+    padding: 10px 0;
   }
 
   .nav-items .skip {
@@ -232,13 +242,12 @@ ul li a {
     max-width: 60px;
     order: 1;
     margin-right: 50px;
+    text-align: left;
   }
-}
 
-.title-link {
-  font-size: 1.3rem;
-  font-weight: 500;
-  order: 2;
+  .spreader {
+    display: none;
+  }
 }
 
 .dark-slide {
@@ -332,15 +341,20 @@ main {
 
 section {
   height: 800px;
+  margin-top: 50px;
 }
 
 section::before {
   display: block;
   content: '';
-  margin-top: -100px;
-  height: 100px;
-  visibility: hidden;
   pointer-events: none;
+  height: 100px;
+  margin: -100px 0 0;
+}
+
+.spreader::before {
+  padding-top: 170px;
+  transition: padding-top 0.4s ease-out;
 }
 
 h2 {
